kubernetes/testing/code-server/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: code-server
  namespace: code-server
  labels:
    app.kubernetes.io/name: code-server
    app.kubernetes.io/instance: code-server
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: code-server
    app.kubernetes.io/instance: code-server
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
